# KolossuS

./: .gitattributes  .gitignore  README.md  env_spec.txt  predict.sh  pyproject.toml
example/toy/: embed.h5  make_test_data.py  pairs.txt  run_model.py  test.fasta
kolossus/: __init__.py  extract.py  kolossus.py  main.py  panel.py
kolossus/aprkh_utils/: README.md  __init__.py  listops.py  seqio.py  stringops.py
kolossus/aprkh_utils/decorators/: __init__.py  batch_utils.py  time_utils.py
kolossus/aprkh_utils/misc/: __init__.py  codon_table.py
kolossus/models/: Network.py  __init__.py  load_model.py  new_ft_v3_humansty.pth  saved_model_cs_ws_ft_humansty.epoch_59.pth
kolossus/utils/: __init__.py  batch_utils.py  conditional_returns.py  parse_fasta.py  read_data.py  seq_to_embedding.py  seqops.py  warnings.py  write_fasta.py
